--- a/css/links_style.css
+++ b/css/links_style.css
@@ -18,6 +18,7 @@ main .links-sociales li a{
 	text-decoration: none;
 	color: white;
 	font-weight: bold;
+	transition: .6s ease;
 }
 
 main .links-sociales li a:hover{
